--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 	path = catalog/solr_search
 	url = git@github.com:jermnelson/solr-search-blueprint.git
 [submodule "mongo_data"]
-	path = mongo_data
+	path = catalog/mongo_data
 	url = git@github.com:jermnelson/mongo-semantic-datastore.git
