--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "catalog/solr_search"]
 	path = catalog/solr_search
 	url = git@github.com:jermnelson/solr-search-blueprint.git
+[submodule "catalog/mongo_datastore"]
+	path = catalog/mongo_datastore
+        url = git@github.com:jermnelson/mongo-semantic-datastore.git
