--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "catalog/patron"]
-	path = catalog/patron
-	url = https://github.com:jermnelson/library-patron-blueprint.git
-[submodule "catalog/solr_search"]
-	path = catalog/solr_search
-	url = https://github.com:jermnelson/solr-search-blueprint.git
-[submodule "catalog/mongo_datastore"]
-	path = catalog/mongo_datastore
-	url = https://github.com/jermnelson/mongo-semantic-datastore.git
+[submodule "bibcat"]
+	path = bibcat
+	url = git@github.com:jermnelson/bibframe-catalog.git
+[submodule "datastore"]
+	path = datastore
+	url = git@github.com:jermnelson/BIBFRAME-Datastore.git
